--- a/mkdocs_document_dates/static/document-dates.config.css
+++ b/mkdocs_document_dates/static/document-dates.config.css
@@ -24,6 +24,17 @@
     margin-right: 0.3rem;
 }
 
+/* customized icons, just change the icon name.
+    Google Fonts Icons (2500+): https://fonts.google.com/icons  */
+.document-dates-plugin .material-icons[data-icon="doc_created"]::before {
+    /* add_circle, add_circle, note_add, add */
+    content: "add_circle";
+}
+.document-dates-plugin .material-icons[data-icon="doc_modified"]::before {
+    /* update, check_circle, task, refresh */
+    content: "update";
+}
+
 
 /* 2. Plug-in wrapper styles
     including divider, margin, padding, etc
