--- a/mkdocs_document_dates/static/core/core.css
+++ b/mkdocs_document_dates/static/core/core.css
@@ -1,12 +1,11 @@
 
 /* 1. Plug-in styles
-    including icons, fonts, colors, opacity, etc
+    including icons, fonts, colors, etc
     */
 .document-dates-plugin {
-    color: #8e8e8e;
+    color: rgba(142, 142, 142, 0.7);
     font-size: 0.75rem;
     padding: 0.2rem 0;
-    opacity: 0.7;
     display: flex;
     align-items: center;
     margin-bottom: 0.3rem;
@@ -24,7 +23,7 @@
     margin-right: 0.3rem;
 }
 
-/* customized icons, just change the icon name.
+/* Customized icons, just change the icon name.
     Google Fonts Icons (2500+): https://fonts.google.com/icons  */
 .document-dates-plugin .material-icons[data-icon="doc_created"]::before {
     /* add_circle, add_circle, note_add, add */
@@ -34,13 +33,22 @@
     /* update, check_circle, task, refresh */
     content: "update";
 }
+.document-dates-plugin .material-icons[data-icon="doc_author"]::before {
+    /* person, account_circle */
+    content: "person";
+}
+.document-dates-plugin .material-icons[data-icon="doc_authors"]::before {
+    /* group, groups */
+    content: "group";
+}
+
 
 
 /* 2. Plug-in wrapper styles
     including divider, margin, padding, etc
     */
 .document-dates-plugin-wrapper.document-dates-top {
-    margin-top: -1.2rem;
+    margin: -1rem 0 1rem 0;
     padding-bottom: 0.3rem;
     border-bottom: 1px solid rgba(142, 142, 142, 0.15);
 }
@@ -56,13 +64,16 @@
 }
 
 
+
 /* 3. Tooltip styles
     including theme, arrow, font, color, background color, etc
     */
+
 /* .tippy-box {
     font-size: 12px;
 } */
-/* Demo of the custom theme 'tomato'  (optional) */
+
+/* Demo of the custom theme 'tomato' (optional) */
 .tippy-box[data-theme~='tomato'] {
     background-color: tomato;
     color: white;
@@ -74,9 +85,9 @@
 /* 
 Recommended Colors:
     tomato: rgb(241, 112, 91);
-    mung bean: rgb(122, 145, 109);
+    mung_bean: rgb(122, 145, 109);
     cloisonné: rgb(15, 89, 164);
-    soft blue: rgb(16, 104, 152); 
+    soft_blue: rgb(16, 104, 152);
 */
 
 /* Customize arrows, resize */
