--- a/mkdocs_document_dates/static/config/user.config.css
+++ b/mkdocs_document_dates/static/config/user.config.css
@@ -13,7 +13,7 @@
 /* Customized icons, just change the icon name.
     Google Fonts Icons (2500+): https://fonts.google.com/icons
 
-    add_circle: add_circle, add_circle, note_add, add
+    add_circle: add_circle, add_circle, note_add, more_time
     update:     update, check_circle, task, refresh
     person:     person, account_circle
     group:      group, groups */
