--- a/mkdocs_document_dates/static/core/core.css
+++ b/mkdocs_document_dates/static/core/core.css
@@ -5,21 +5,21 @@
 .document-dates-plugin {
     color: #666;
     font-size: 0.9rem;
-    padding: 0.2rem 0;
     display: flex;
     align-items: center;
+    padding: 0.2rem 0;
     margin-bottom: 0.6rem;
 }
 .md-main .document-dates-plugin {
     color: rgba(142, 142, 142, 0.7);
     font-size: 0.75rem;
 }
-.document-dates-plugin > span:not(:first-child) {
-    margin-left: 1.5rem;
-}
 .document-dates-plugin > span {
     display: inline-flex;
     align-items: center;
+}
+.document-dates-plugin > span:not(:first-child) {
+    margin-left: 1.5rem;
 }
 .document-dates-plugin .material-icons {
     font-size: 1rem;
@@ -111,10 +111,11 @@ Recommended Colors:
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    margin: -0.15rem 0 -0.15rem 0.15rem;
+    margin: -0.15rem;
+    padding-left: 0.15rem;
 }
 .avatar-wrapper {
-    margin: 0.15rem 0.3rem 0.15rem 0;
+    margin: 0.15rem;
     position: relative;
     width: 30px;
     height: 30px;
