--- a/templates/overrides/partials/source-file.html
+++ b/templates/overrides/partials/source-file.html
@@ -1,23 +1,23 @@
 <div class="document-dates-plugin">
-    {# Render date of creation -#}
+    {#- Render date of creation #}
     <span data-tippy-content data-tippy-raw="{{ page.meta.document_dates_created[:10] }}">
         <span class="material-icons" data-icon="doc_created"></span>
         <time datetime="{{ page.meta.document_dates_created }}"></time>
     </span>
 
-    {# Render date of last update -#}
+    {#- Render date of last update #}
     <span data-tippy-content data-tippy-raw="{{ page.meta.document_dates_modified[:10] }}">
         <span class="material-icons" data-icon="doc_modified"></span>
         <time datetime="{{ page.meta.document_dates_modified }}"></time>
     </span>
 
-    {# Render authors -#}
+    {#- Render authors #}
     {% if page.meta.document_dates_authors -%}
         {% set icon = 'doc_author' if page.meta.document_dates_authors|length == 1 else 'doc_authors' -%}
         <span class="material-icons" data-icon="{{ icon }}"></span>
         <div class="avatar-group">
-            {% for author in page.meta.document_dates_authors -%}
-                {%- set tooltip -%}
+            {%- for author in page.meta.document_dates_authors %}
+                {% set tooltip -%}
                     {%- if author.url -%}
                         <a href="{{ author.url }}" target="_blank">{{ author.name }}</a>
                     {%- elif author.email -%}
@@ -25,13 +25,13 @@
                     {%- else -%}
                         {{ author.name }}
                     {%- endif -%}
-                {%- endset -%}
+                {% endset -%}
                 {% set avatar_url = author.avatar if author.avatar else " " -%}
-                <div class="avatar-wrapper" data-name="{{- author.name -}}" data-tippy-content data-tippy-raw='{{- tooltip -}}'>
+                <div class="avatar-wrapper" data-name="{{ author.name }}" data-tippy-content data-tippy-raw='{{ tooltip }}'>
                     <img class="avatar" src="{{ avatar_url }}" />
                     <span class="avatar-text"></span>
                 </div>
-            {% endfor -%}
+            {%- endfor %}
         </div>
-    {% endif -%}
+    {%- endif %}
 </div>
