--- a/templates/overrides/partials/source-file.html
+++ b/templates/overrides/partials/source-file.html
@@ -12,10 +12,10 @@
     </span>
 
     {#- Render authors #}
-    {% if page.meta.document_dates_authors -%}
-        {% set icon = 'doc_author' if page.meta.document_dates_authors|length == 1 else 'doc_authors' -%}
-        <span class="material-icons" data-icon="{{ icon }}"></span>
-        <div class="avatar-group">
+    {%- if page.meta.document_dates_authors %}
+        {%- set icon = 'doc_author' if page.meta.document_dates_authors|length == 1 else 'doc_authors' %}
+    <span class="material-icons" data-icon="{{ icon }}"></span>
+    <div class="avatar-group">
         {%- for author in page.meta.document_dates_authors %}
             {%- set tooltip %}
                 {%- if author.url -%}
@@ -27,11 +27,11 @@
                 {%- endif -%}
             {% endset -%}
             {%- set avatar_url = author.avatar if author.avatar else " " %}
-            <div class="avatar-wrapper" data-name="{{ author.name }}" data-tippy-content data-tippy-raw='{{ tooltip }}'>
-                <img class="avatar" src="{{ avatar_url }}" />
-                <span class="avatar-text"></span>
-            </div>
-        {%- endfor %}
+        <div class="avatar-wrapper" data-name="{{ author.name }}" data-tippy-content data-tippy-raw='{{ tooltip }}'>
+            <img class="avatar" src="{{ avatar_url }}" />
+            <span class="avatar-text"></span>
         </div>
+        {%- endfor %}
+    </div>
     {%- endif %}
 </div>
