--- a/mkdocs_document_dates/static/fonts/material-icons.css
+++ b/mkdocs_document_dates/static/fonts/material-icons.css
@@ -3,7 +3,9 @@
   font-style: normal;
   font-weight: 400;
   src: url(./materialicons.woff2) format('woff2'),
-       url(./materialicons.ttf) format('truetype');
+       url(https://fonts.gstatic.com/s/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2'),
+       url(https://fonts.gstatic.com/s/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNa.woff) format('woff'),
+       url(https://fonts.gstatic.com/s/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNZ.ttf) format('truetype');
 }
 
 .material-icons {
