--- a/templates/overrides/partials/source-file.html
+++ b/templates/overrides/partials/source-file.html
@@ -25,11 +25,10 @@
                 {%- else -%}
                     {{ author.name }}
                 {%- endif -%}
-            {% endset -%}
-            {%- set avatar_url = author.avatar if author.avatar else "" %}
+            {%- endset %}
         <div class="avatar-wrapper" data-name="{{ author.name }}" data-tippy-content data-tippy-raw='{{ tooltip }}'>
             <span class="avatar-text"></span>
-            <img class="avatar" src="{{ avatar_url }}" onerror="this.style.display='none'" />
+            <img class="avatar" src="{{ author.avatar }}" onerror="this.style.display='none'" />
         </div>
         {%- endfor %}
     </div>
