Optimize UI structure and style

--- a/templates/overrides/partials/source-file.html
+++ b/templates/overrides/partials/source-file.html
@@ -1,61 +1,74 @@
+{%- if page.meta.document_dates_created or page.meta.document_dates_updated or page.meta.document_dates_authors -%}
 <div class="document-dates-plugin">
-    {#- Render date of creation #}
-    <span data-tippy-content data-tippy-raw="{{ page.meta.document_dates_created[:10] }}">
-        <span class="material-icons" data-icon="doc_created"></span>
-        <time datetime="{{ page.meta.document_dates_created }}"></time>
+  <div class="dd-left">
+
+    {#- Render date of creation -#}
+    {%- if page.meta.document_dates_created %}
+    <span class="dd-item" data-tippy-content data-tippy-raw="{{ page.meta.document_dates_created[:10] }}">
+      <span class="material-icons" data-icon="doc_created"></span>
+      <time datetime="{{ page.meta.document_dates_created }}"></time>
     </span>
-
-    {#- Render date of last update #}
-    <span data-tippy-content data-tippy-raw="{{ page.meta.document_dates_updated[:10] }}">
-        <span class="material-icons" data-icon="doc_updated"></span>
-        <time datetime="{{ page.meta.document_dates_updated }}"></time>
-    </span>
-
-
-    {#- Render authors (avatar mode) -#}
-    {%- if page.meta.document_dates_authors %}
-        {%- set icon = 'doc_author' if page.meta.document_dates_authors|length == 1 else 'doc_authors' %}
-    <span class="material-icons" data-icon="{{ icon }}"></span>
-    <div class="avatar-group">
-        {%- for author in page.meta.document_dates_authors %}
-            {%- set tooltip %}
-                {%- if author.url -%}
-                    <a href="{{ author.url }}" target="_blank">{{ author.name }}</a>
-                {%- elif author.email -%}
-                    <a href="mailto:{{ author.email }}">{{ author.name }}</a>
-                {%- else -%}
-                    {{ author.name }}
-                {%- endif -%}
-            {%- endset %}
-        <div class="avatar-wrapper" data-name="{{ author.name }}" data-tippy-content data-tippy-raw='{{ tooltip }}'>
-            <span class="avatar-text"></span>
-            <img class="avatar" src="{{ author.avatar }}" onerror="this.style.display='none'" />
-        </div>
-        {%- endfor %}
-    </div>
     {%- endif %}
 
+    {#- Render date of last update -#}
+    {%- if page.meta.document_dates_updated %}
+    <span class="dd-item" data-tippy-content data-tippy-raw="{{ page.meta.document_dates_updated[:10] }}">
+      <span class="material-icons" data-icon="doc_updated"></span>
+      <time datetime="{{ page.meta.document_dates_updated }}"></time>
+    </span>
+    {%- endif %}
+  </div>
 
-    {#- Render authors (text mode) -#}
+  
+  {#- Render authors (avatar mode) -#}
+  {%- if page.meta.document_dates_authors %}
+  <div class="dd-right">
+    {%- set icon = 'doc_author' if page.meta.document_dates_authors|length == 1 else 'doc_authors' %}
+    <span class="material-icons" data-icon="{{ icon }}"></span>
+    <div class="author-group">
+    {%- for author in page.meta.document_dates_authors %}
+      {%- set tooltip %}
+        {%- if author.url -%}
+          <a href="{{ author.url }}" target="_blank">{{ author.name }}</a>
+        {%- elif author.email -%}
+          <a href="mailto:{{ author.email }}">{{ author.name }}</a>
+        {%- else -%}
+          {{ author.name }}
+        {%- endif -%}
+      {%- endset %}
+      <div class="avatar-wrapper" data-name="{{ author.name }}" data-tippy-content data-tippy-raw='{{ tooltip }}'>
+        <span class="avatar-text"></span>
+        <img class="avatar" src="{{ author.avatar }}" onerror="this.style.display='none'" />
+      </div>
+    {%- endfor %}
+    </div>
+  </div>
+  {%- endif %}
+
+  
+  {#- Render authors (text mode) -#}
 {#
-    {%- if page.meta.document_dates_authors %}
-        {%- set icon = 'doc_author' if page.meta.document_dates_authors|length == 1 else 'doc_authors' %}
+  {%- if page.meta.document_dates_authors %}
+  <div class="dd-right">
+    {%- set icon = 'doc_author' if page.meta.document_dates_authors|length == 1 else 'doc_authors' %}
     <span class="material-icons" data-icon="{{ icon }}"></span>
-    <div class="avatar-group">
-        {%- for author in page.meta.document_dates_authors %}
-            {%- if not loop.first -%},&nbsp;&nbsp;{%- endif -%}
-            {%- set tooltip %}
-                {%- if author.url -%}
-                    <a href="{{ author.url }}" target="_blank">{{ author.name }}</a>
-                {%- elif author.email -%}
-                    <a href="mailto:{{ author.email }}">{{ author.name }}</a>
-                {%- else -%}
-                    {{ author.name }}
-                {%- endif -%}
-            {%- endset %}
-        <span data-tippy-content data-tippy-raw='{{ tooltip }}'>{{ tooltip }}</span>
-        {%- endfor %}
+    <div class="author-group">
+    {%- for author in page.meta.document_dates_authors %}
+      {%- if not loop.first -%},&nbsp;&nbsp;{%- endif -%}
+      {%- set tooltip %}
+        {%- if author.url -%}
+          <a href="{{ author.url }}" target="_blank">{{ author.name }}</a>
+        {%- elif author.email -%}
+          <a href="mailto:{{ author.email }}">{{ author.name }}</a>
+        {%- else -%}
+          {{ author.name }}
+        {%- endif -%}
+      {%- endset %}
+      <span class="text-wrapper" data-tippy-content data-tippy-raw='{{ tooltip }}'>{{ tooltip }}</span>
+    {%- endfor %}
     </div>
-    {%- endif %}
+  </div>
+  {%- endif %}
 #}
 </div>
+{%- endif -%}
