--- a/mkdocs_document_dates/static/core/core.css
+++ b/mkdocs_document_dates/static/core/core.css
@@ -38,6 +38,9 @@
     font-size: 1rem;
     opacity: 0.85;
     margin-right: 0.3rem;
+    display: inline-flex;
+    align-items: center;
+    line-height: 1;
 }
 .md-main .document-dates-plugin .material-icons {
     font-size: 0.9rem;
@@ -74,6 +77,7 @@
     align-items: center;
     white-space: nowrap;
     flex-shrink: 0;
+    line-height: 1;
 }
 .dd-left > .dd-item + .dd-item {
     margin-left: 1.5rem;
@@ -85,6 +89,10 @@
     justify-content: flex-end;
     flex: 1 1 auto;
     min-width: 110px;
+}
+
+.dd-right.dd-right-start {
+    justify-content: flex-start;
 }
 
 /* ==========================================================================
