--- a/mkdocs_document_dates/static/templates/recently_updated_detail.html
+++ b/mkdocs_document_dates/static/templates/recently_updated_detail.html
@@ -25,7 +25,7 @@
 }
 .card-date {
     font-size: 0.84em;
-    color: rgba(100, 100, 100, 0.6);
+    color: rgba(100, 100, 100, 0.4);
     white-space: nowrap;
     margin-right: 10px;
 }
@@ -74,7 +74,7 @@
 .card-cover img {
     width: 100%;
     height: 100%;
-    object-fit: cover;  /* 等比填充，超出裁剪 */
+    object-fit: cover;
     margin: 0 !important;
 }
 </style>
