--- a/mkdocs_document_dates/static/templates/recently_updated_grid.html
+++ b/mkdocs_document_dates/static/templates/recently_updated_grid.html
@@ -81,7 +81,7 @@
 .card-cover img {
     width: 100%;
     height: 100%;
-    object-fit: cover;  /* 等比填充，超出裁剪 */
+    object-fit: cover;
     margin: 0 !important;
 }
 </style>
