--- a/mkdocs_document_dates/static/templates/recently_updated_group.html
+++ b/mkdocs_document_dates/static/templates/recently_updated_group.html
@@ -68,8 +68,8 @@
 }
 .article-grid.is-list .card-title {
     font-weight: 400;
-    /* color: #0077cc; */
-    color: var(--md-typeset-color, #1c1c1c);
+    color: #0077cc;
+    /* color: var(--md-typeset-color, #1c1c1c); */
 }
 .article-grid.is-list .card-date {
     margin-right: 0;
