--- a/mkdocs_document_dates/static/templates/recently_updated_group.html
+++ b/mkdocs_document_dates/static/templates/recently_updated_group.html
@@ -70,6 +70,11 @@
     font-weight: 400;
     color: #0077cc;
     /* color: var(--md-typeset-color, #1c1c1c); */
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-width: 0;
 }
 .article-grid.is-list .card-date {
     margin-right: 0;
