--- a/mkdocs_document_dates/static/core/core.css
+++ b/mkdocs_document_dates/static/core/core.css
@@ -68,6 +68,7 @@
     display: flex;
     align-items: center;
     flex-shrink: 0;
+    margin-right: 1.4rem;
 }
 .dd-item {
     display: inline-flex;
