Optimize text link hover style

--- a/mkdocs_document_dates/static/templates/recently_updated_group.html
+++ b/mkdocs_document_dates/static/templates/recently_updated_group.html
@@ -110,6 +110,9 @@
     white-space: nowrap;
     margin-right: 10px;
 }
+.card-header:hover {
+    text-decoration: none !important;
+}
 .card-header:hover .card-title {
     color: var(--md-accent-fg-color, blue);
     text-decoration: underline;
