Comment overlap css

--- a/mkdocs_document_dates/static/templates/recently_updated_group.html
+++ b/mkdocs_document_dates/static/templates/recently_updated_group.html
@@ -2,7 +2,7 @@
 .article-layout-switcher {
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 12px;
+    /* margin-bottom: 20px; */
 }
 .article-layout-switcher button + button {
     margin-left: 8px;
