--- a/mkdocs_document_dates/static/templates/recently_updated_group.html
+++ b/mkdocs_document_dates/static/templates/recently_updated_group.html
@@ -116,6 +116,9 @@
     color: var(--md-accent-fg-color, blue);
     text-decoration: underline;
 }
+.card-header:focus {
+    text-decoration: none !important;
+}
 
 /* --- 第二行：摘要与封面图 --- */
 .card-body {
