Fix underline issue when focusing

--- a/mkdocs_document_dates/static/templates/recently_updated_group.html
+++ b/mkdocs_document_dates/static/templates/recently_updated_group.html
@@ -109,15 +109,13 @@
     white-space: nowrap;
     margin-right: 10px;
 }
-.card-header:hover {
+.card-header:hover,
+.card-header:focus {
     text-decoration: none !important;
 }
 .card-header:hover .card-title {
     color: var(--md-accent-fg-color, blue);
     text-decoration: underline;
-}
-.card-header:focus {
-    text-decoration: none !important;
 }
 
 /* --- 第二行：摘要与封面图 --- */
